# test_task_csv_reader

./: main.py  pyproject.toml  readme.md  test_main.py
tests/: test_main.py
