[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["kirvitchenko <vitchenkokir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.9.0"
tabulate = "^0.9.0"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
